[tool.poetry]
name = "containerjedi"
version = "0.1.0"
description = "Browser Convenience Tools for StarWarsFFG Role Playing Game"
authors = ["lester1989 <l.ester@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
sqlmodel = "^0.0.16"
Jinja2 = "^3.1.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
alembic = "^1.13.1"
pyscript = "^0.2.5"
websockets = "^12.0"
pytailwindcss = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
